# deepseek-mcp-server

./: .gitignore  DEPLOY.md  README.md  pyproject.toml
src/deepseek_mcp/: __init__.py  server.py
